--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.16.1",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.6.0",
